--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "test": "jest"
   },
   "keywords": [
     "express",
@@ -41,9 +42,12 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/fluent-ffmpeg": "^2.1.24",
+    "@types/jest": "^30.0.0",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.14.2",
     "@types/uuid": "^9.0.8",
+    "jest": "^30.1.3",
+    "ts-jest": "^29.4.2",
     "typescript": "^5.4.5"
   },
   "peerDependencies": {
