feat: Update README and package.json for version 1.0.4 with enhanced features and dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexus-uploader",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A powerful, stream-based media upload and optimization middleware for Express.js, supporting S3-compatible storage.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -13,14 +13,35 @@
     "express",
     "multer",
     "s3",
+    "aws-s3",
     "digitalocean",
     "upload",
-    "media",
-    "optimizer",
+    "uploader",
+    "file-upload",
+    "file-uploader",
+    "image-uploader",
+    "video-uploader",
+    "document-uploader",
+    "express-file-upload",
+    "multer-uploader",
+    "s3-uploader",
+    "digitalocean-uploader",
+    "nodejs-file-upload",
+    "media-uploader",
+    "image-optimizer",
+    "video-optimizer",
     "sharp",
     "ffmpeg",
     "webp",
-    "webm"
+    "webm",
+    "nodejs-upload",
+    "cloud-upload",
+    "stream-upload",
+    "file-processing",
+    "video-transcoding",
+    "image-compression",
+    "express-middleware",
+    "nexus-uploader"
   ],
   "author": "Md Mitul Hossain <md.mitul.hossen99@gmail.com>",
   "license": "MIT",
