--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "url": "git+https://github.com/mdmitulhossen/nexus-uploader.git"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.28.0",
+    "@google-cloud/storage": "^7.17.1",
     "aws-sdk": "^2.1641.0",
     "fluent-ffmpeg": "^2.1.3",
     "http-status": "^1.7.4",
@@ -69,6 +71,7 @@
     "@types/uuid": "^9.0.8",
     "jest": "^30.1.3",
     "ts-jest": "^29.4.2",
+    "tslib": "^2.8.1",
     "typescript": "^5.4.5"
   },
   "peerDependencies": {
