--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nexus-uploader/react",
-  "version": "2.0.0",
+  "name": "nexus-uploader-react",
+  "version": "1.0.1",
   "description": "React hooks and components for Nexus Uploader client",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -14,7 +14,7 @@
     "react-dom": "^16.8.0"
   },
   "dependencies": {
-    "@nexus-uploader/core": "^2.0.0"
+    "nexus-uploader-core": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
@@ -27,5 +27,6 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "gitHead": "7ff4f9e64f24c02973e9dfb84bcb6fe2daa9c47c"
 }
