--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,9 +1,10 @@
 {
   "name": "nexus-uploader-core",
-  "version": "1.0.3",
+  "version": "1.1.1",
   "description": "Core client library for Nexus Uploader - handles API communication and chunking logic",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "license": "MIT",
   "scripts": {
     "build": "tsc",
     "test": "jest",
