--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,9 +1,10 @@
 {
   "name": "nexus-uploader-react",
-  "version": "1.0.3",
+  "version": "1.1.1",
   "description": "React hooks and components for Nexus Uploader client",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "license": "MIT",
   "scripts": {
     "build": "tsc",
     "test": "jest --passWithNoTests",
@@ -14,7 +15,7 @@
     "react-dom": "^16.8.0"
   },
   "dependencies": {
-    "nexus-uploader-core": "^1.0.3"
+    "nexus-uploader-core": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
