--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexus-uploader",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A powerful, stream-based media upload and optimization middleware for Express.js, supporting S3-compatible storage.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -56,15 +56,23 @@
     "@azure/storage-blob": "^12.28.0",
     "@google-cloud/storage": "^7.17.1",
     "aws-sdk": "^2.1641.0",
+    "clamav.js": "^0.12.0",
+    "express-rate-limit": "^7.1.5",
+    "file-type": "^18.7.0",
     "fluent-ffmpeg": "^2.1.3",
     "http-status": "^1.7.4",
+    "ioredis": "^5.3.2",
+    "memory-cache": "^0.2.0",
     "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
     "sharp": "^0.33.4",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/file-type": "^10.9.1",
     "@types/fluent-ffmpeg": "^2.1.24",
+    "@types/ioredis": "^4.28.8",
     "@types/jest": "^30.0.0",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.14.2",
