--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexus-uploader-core",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "description": "Core client library for Nexus Uploader - handles API communication, chunking logic, and direct storage uploads",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -23,10 +23,11 @@
   "optionalDependencies": {
     "@aws-sdk/client-s3": "^3.490.0",
     "@aws-sdk/lib-storage": "^3.490.0",
-    "@google-cloud/storage": "^7.7.0",
-    "@azure/storage-blob": "^12.17.0"
+    "@azure/storage-blob": "^12.17.0",
+    "@google-cloud/storage": "^7.7.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/node": "^20.14.2",
     "jest": "^30.1.3",
     "lerna": "^9.0.0",
