--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexus-uploader-react",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "description": "React hooks and components for Nexus Uploader - seamless file uploads with backend API or direct storage integration",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,12 +10,12 @@
     "test": "jest --passWithNoTests",
     "prepare": "npm run build"
   },
-  "peerDependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
-  },
   "dependencies": {
-    "nexus-uploader-core": "^1.2.2"
+    "nexus-uploader-core": "^1.3.0"
+  },
+  "peerDependencies": {
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
